// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test: Spin[site/pages/components/Spin/example-01-01-default.js] 1`] = `
<div>
  <div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
  </div>
  <div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
  </div>
  <div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
    <div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-01-02-tip.js] 1`] = `
<div>
  <div>
    <div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
    </div>
    <div>
      <span>
        Loading...
      </span>
    </div>
  </div>
  <div>
    <div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
      <div>
        <div />
      </div>
    </div>
    <div>
      <span>
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-01-wrapper.js] 1`] = `
<div>
  <label>
    <span />
    <input />
    <i />
    <span />
  </label>
  <div>
    <div>
      <div>
        <div>
          <h3>
            This is Title
          </h3>
          Some Content Here...
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
        <div>
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-02-chasing-dots.js] 1`] = `
<div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-03-cube-grid.js] 1`] = `
<div>
  <div>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
  <div>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
  <div>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-04-double-bounce.js] 1`] = `
<div>
  <div>
    <div />
    <div />
  </div>
  <div>
    <div />
    <div />
  </div>
  <div>
    <div />
    <div />
  </div>
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-05-fading-circle.js] 1`] = `
<div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-06-four-dots.js] 1`] = `
<div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-07-plane.js] 1`] = `
<div>
  <div />
  <div />
  <div />
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-08-pulse.js] 1`] = `
<div>
  <div />
  <div />
  <div />
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-09-ring.js] 1`] = `
<div>
  <div />
  <div />
  <div />
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-10-scale-circle.js] 1`] = `
<div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-11-three-bounce.js] 1`] = `
<div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
  <div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
    <div>
      <svg>
        <circle />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Snapshot test: Spin[site/pages/components/Spin/example-12-wave.js] 1`] = `
<div>
  <div>
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
  <div>
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
  <div>
    <div />
    <div />
    <div />
    <div />
    <div />
  </div>
</div>
`;
